RESOLVED FIXED143976
PDFs still don't snapshot properly in iOS Safari
https://bugs.webkit.org/show_bug.cgi?id=143976
Summary PDFs still don't snapshot properly in iOS Safari
Tim Horton
Reported 2015-04-20 18:53:33 PDT
PDFs still don't snapshot properly in iOS Safari
Attachments
Patch (4.72 KB, patch)
2015-04-20 18:53 PDT, Tim Horton
andersca: review+
Tim Horton
Comment 1 2015-04-20 18:53:48 PDT
Tim Horton
Comment 2 2015-04-20 18:54:13 PDT
Anders Carlsson
Comment 3 2015-04-20 21:16:53 PDT
Comment on attachment 251210 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=251210&action=review > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2648 > + CGContextRef ctx = UIGraphicsGetCurrentContext(); Please use context instead of context. > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2650 > + CGContextTranslateCTM(ctx, destinationRect.origin.x, destinationRect.origin.y); > + CGContextScaleCTM(ctx, imageScale, imageScale); Do you need to save and restore the state here?
Tim Horton
Comment 4 2015-04-21 00:58:14 PDT
(In reply to comment #3) > Comment on attachment 251210 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=251210&action=review > > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2648 > > + CGContextRef ctx = UIGraphicsGetCurrentContext(); > > Please use context instead of context. You can't abbreviate it even if you want to :D > > Source/WebKit2/UIProcess/API/Cocoa/WKWebView.mm:2650 > > + CGContextTranslateCTM(ctx, destinationRect.origin.x, destinationRect.origin.y); > > + CGContextScaleCTM(ctx, imageScale, imageScale); > > Do you need to save and restore the state here? I don't think so, because it's a new context that was just created and will be lost very soon. Seems like that would be a waste of time, right?
Tim Horton
Comment 5 2015-04-21 11:02:49 PDT
Note You need to log in before you can comment on or make changes to this bug.